--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       ACAPY_NO_LEDGER: "true"
       ADMIN_PORT: "8001"
       AGENT_PORT: "8000"
+      WEBHOOK_URL: "http://alice-webhook:5000"
     entrypoint: /bin/bash
     command: ["-c",
         "aca-py start \
@@ -22,10 +23,21 @@ services:
         --auto-accept-invites \
         --auto-accept-requests \
         --auto-ping-connection \
-        --admin-insecure-mode "
+        --admin-insecure-mode \
+        --webhook-url 'http://alice-webhook:5000'"
     ]
     ports:
       - "8001:8001"
+  
+  alice-webhook:
+    image: python:3.8-slim
+    container_name: alice-webhook
+    volumes:
+      - ./webhooks/alice/webhook.py:/app/webhook.py
+    working_dir: /app
+    command: ["sh", "-c", "pip install flask && python webhook.py"]
+    ports:
+      - "5000:5000"
 
   bob-agent:
     image: bcgovimages/aries-cloudagent:py36-1.16-1_0.7.1
@@ -40,6 +52,7 @@ services:
       ACAPY_NO_LEDGER: "true"
       ADMIN_PORT: "8101"
       AGENT_PORT: "8100"
+      WEBHOOK_URL: "http://bob-webhook:5000"
     entrypoint: /bin/bash
     command: ["-c",
         "aca-py start \
@@ -49,7 +62,18 @@ services:
         --auto-accept-invites \
         --auto-accept-requests \
         --auto-ping-connection \
-        --admin-insecure-mode "
+        --admin-insecure-mode \
+        --webhook-url 'http://bob-webhook:5000'"
     ]
     ports:
       - "8101:8101"
+  
+  bob-webhook:
+    image: python:3.8-slim
+    container_name: bob-webhook
+    volumes:
+      - ./webhooks/bob/webhook.py:/app/webhook.py
+    working_dir: /app
+    command: ["sh", "-c", "pip install flask && python webhook.py"]
+    ports:
+      - "5001:5000"
