--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: '3.12'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install distutils
           python -m pip install pipenv
           pipenv install --dev
           pipenv run pip install black pylint
