--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install distutils
+          python -m pip install setuptools
           python -m pip install pipenv
           pipenv install --dev
           pipenv run pip install black pylint
