--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -23,9 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install setuptools
           python -m pip install pipenv
-          pipenv install --dev
-          pipenv run pip install black pylint
-
+          pipenv install --dev --sequential
 
       - name: Run black
         run: pipenv run black src --check --diff
