--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -23,7 +23,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install setuptools
           python -m pip install pipenv
-          pipenv install --dev --sequential
+          pipenv install --dev
 
       - name: Run black
         run: pipenv run black src --check --diff
