--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: '3.11'
 
@@ -24,6 +24,7 @@ jobs:
           python -m pip install setuptools
           python -m pip install pipenv
           pipenv install --dev
+          pipenv install dill
 
       - name: Run black
         run: pipenv run black src --check --diff
